--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,7 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 "template" = ["assets/**/*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
